[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/anima/ui/shared/AnimaNodesList.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/icons/Close.svg" type="Texture" id=2]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/anima/icons/Add.svg" type="Texture" id=4]
[ext_resource path="res://addons/anima/components/AnimaButton.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=18]
use_filter = true
font_data = ExtResource( 3 )
__meta__ = {
"_original_size": 18
}

[node name="AnimaNodesList" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1016.0
margin_bottom = 22.0

[node name="SearchField" type="LineEdit" parent="HBoxContainer"]
margin_right = 1016.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 18 )

[node name="NodesList" type="Tree" parent="."]
margin_top = 30.0
margin_right = 1016.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
margin_top = 558.0
margin_right = 1016.0
margin_bottom = 592.0
custom_constants/separation = 24
alignment = 2

[node name="Add" type="Control" parent="ButtonsContainer"]
margin_left = 752.0
margin_right = 872.0
margin_bottom = 34.0
rect_min_size = Vector2( 120, 34 )
rect_pivot_offset = Vector2( 60, 17 )
hint_tooltip = "Remove the frame"
mouse_default_cursor_shape = 2
script = ExtResource( 5 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = "Add"
Button/Align = 1
Button/VAlign = 1
Button/Font = null
Button/ToggleMode = false
Normal/FillColor = Color( 0.192157, 0.270588, 0.411765, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.254902, 0.34902, 0.509804, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 8
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 8
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 8
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 8
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 8
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 1
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 2, 2 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="Icon" type="Sprite" parent="ButtonsContainer/Add"]
position = Vector2( 12, 10 )
texture = ExtResource( 4 )
centered = false

[node name="Close" type="Control" parent="ButtonsContainer"]
margin_left = 896.0
margin_right = 1016.0
margin_bottom = 34.0
rect_min_size = Vector2( 120, 34 )
rect_pivot_offset = Vector2( 60, 17 )
hint_tooltip = "Remove the frame"
mouse_default_cursor_shape = 2
script = ExtResource( 5 )
Animation/AnimatePropertyChange = false
Animation/Speed = 0.15
Animation/Easing = 0
Button/Label = "Close"
Button/Align = 1
Button/VAlign = 1
Button/Font = null
Button/ToggleMode = false
Normal/FillColor = Color( 0.239216, 0.235294, 0.254902, 1 )
Normal/FontColor = Color( 1, 1, 1, 1 )
Hovered/UseSameStyleOf = ""
Hovered/FillColor = Color( 0.290196, 0.286275, 0.309804, 1 )
Hovered/FontColor = Color( 1, 1, 1, 0 )
Hovered/Scale = Vector2( 1, 1 )
Pressed/UseSameStyleOf = ""
Pressed/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Pressed/FontColor = Color( 1, 1, 1, 0 )
Focused/UseSameStyleOf = ""
Focused/FillColor = Color( 0.258824, 0.541176, 0.819608, 1 )
Focused/FontColor = Color( 1, 1, 1, 0 )
Normal/Size = Rect2( 0, 0, 100, 100 )
Hovered/Size = Rect2( -1, -1, -1, -1 )
Focused/Size = Rect2( -1, -1, -1, -1 )
Pressed/Size = Rect2( -1, -1, -1, -1 )
Normal/Border/Color = Color( 1, 1, 1, 0 )
Hovered/Border/Color = Color( 1, 1, 1, 0.01 )
Focused/Border/Color = Color( 1, 1, 1, 0.01 )
Pressed/Border/Color = Color( 1, 1, 1, 0.01 )
Normal/Border/Blend = false
Hovered/Border/Blend = false
Focused/Border/Blend = false
Pressed/Border/Blend = false
Normal/Border/Offset = Vector2( 0, 0 )
Hovered/Border/Offset = Vector2( -1, -1 )
Focused/Border/Offset = Vector2( -1, -1 )
Pressed/Border/Offset = Vector2( -1, -1 )
Normal/Border/Widh/Left = 0
Hovered/Border/Widh/Left = -1
Focused/Border/Widh/Left = -1
Pressed/Border/Widh/Left = -1
Normal/Border/Widh/Top = 0
Hovered/Border/Widh/Top = -1
Focused/Border/Widh/Top = -1
Pressed/Border/Widh/Top = -1
Normal/Border/Widh/Right = 0
Hovered/Border/Widh/Right = -1
Focused/Border/Widh/Right = -1
Pressed/Border/Widh/Right = -1
Normal/Border/Widh/Bottom = 0
Hovered/Border/Widh/Bottom = -1
Focused/Border/Widh/Bottom = -1
Pressed/Border/Widh/Bottom = -1
Normal/Border/Radius/Details = 8
Hovered/Border/Radius/Details = -1
Focused/Border/Radius/Details = -1
Pressed/Border/Radius/Details = -1
Normal/Border/Radius/TopLeft = 8
Hovered/Border/Radius/TopLeft = -1
Focused/Border/Radius/TopLeft = -1
Pressed/Border/Radius/TopLeft = -1
Normal/Border/Radius/TopRight = 8
Hovered/Border/Radius/TopRight = -1
Focused/Border/Radius/TopRight = -1
Pressed/Border/Radius/TopRight = -1
Normal/Border/Radius/BottomRight = 8
Hovered/Border/Radius/BottomRight = -1
Focused/Border/Radius/BottomRight = -1
Pressed/Border/Radius/BottomRight = -1
Normal/Border/Radius/BottomLeft = 8
Hovered/Border/Radius/BottomLeft = -1
Focused/Border/Radius/BottomLeft = -1
Pressed/Border/Radius/BottomLeft = -1
Normal/Border/Offset/Radius/Details = 8
Hovered/Border/Offset/Radius/Details = -1
Focused/Border/Offset/Radius/Details = -1
Pressed/Border/Offset/Radius/Details = -1
Normal/Border/Offset/Radius/TopLeft = -1
Hovered/Border/Offset/Radius/TopLeft = -1
Focused/Border/Offset/Radius/TopLeft = -1
Pressed/Border/Offset/Radius/TopLeft = -1
Normal/Border/Offset/Radius/TopRight = -1
Hovered/Border/Offset/Radius/TopRight = -1
Focused/Border/Offset/Radius/TopRight = -1
Pressed/Border/Offset/Radius/TopRight = -1
Normal/Border/Offset/Radius/BottomRight = -1
Hovered/Border/Offset/Radius/BottomRight = -1
Focused/Border/Offset/Radius/BottomRight = -1
Pressed/Border/Offset/Radius/BottomRight = -1
Normal/Border/Offset/Radius/BottomLeft = -1
Hovered/Border/Offset/Radius/BottomLeft = -1
Focused/Border/Offset/Radius/BottomLeft = -1
Pressed/Border/Offset/Radius/BottomLeft = -1
Normal/Shadow/Color = Color( 0, 0, 0, 0.517647 )
Hovered/Shadow/Color = Color( 1, 1, 1, 0 )
Focused/Shadow/Color = Color( 1, 1, 1, 0 )
Pressed/Shadow/Color = Color( 1, 1, 1, 0 )
Normal/Shadow/Size = 1
Hovered/Shadow/Size = -1
Focused/Shadow/Size = -1
Pressed/Shadow/Size = -1
Normal/Shadow/Offset = Vector2( 2, 2 )
Hovered/Shadow/Offset = Vector2( -1, -1 )
Focused/Shadow/Offset = Vector2( -1, -1 )
Pressed/Shadow/Offset = Vector2( -1, -1 )

[node name="Icon" type="Sprite" parent="ButtonsContainer/Close"]
position = Vector2( 12, 10 )
texture = ExtResource( 2 )
centered = false

[connection signal="text_changed" from="HBoxContainer/SearchField" to="." method="_on_SearchField_text_changed"]
[connection signal="item_activated" from="NodesList" to="." method="_on_NodesList_item_activated"]
[connection signal="item_selected" from="NodesList" to="." method="_on_NodesList_item_selected"]
[connection signal="pressed" from="ButtonsContainer/Close" to="." method="_on_Close_pressed"]
